# aikos

./: .gitignore  .gitmodules  ADDRESS_BYTE_ORDER_INVESTIGATION.md  AGENTS.md  CMakeLists.txt  COMMIT_MESSAGE.md  COMPARISON_REPORT.md  CURRENT_STATUS.md  DOCUMENTATION_NOTE.md  ENDIANNESS.md  ENDIANNESS_ANALYSIS_PLAN.md  ENDIANNESS_ANALYSIS_SUMMARY.md  ENDIANNESS_FINDINGS.md  ENDIANNESS_VERIFICATION_STATUS.md  LOGGING_ANALYSIS.md  MEMORY_MANAGEMENT_ANALYSIS.md  MEMORY_MANAGEMENT_SUMMARY.md  NEXT_STEPS.md  NIXOS_PACKAGES.md  OPCODES_REVIEW.md  README.md  RELOCATION_COMPLETE.md  RELOCATION_SUMMARY.md  STEP_COMPARISON_STATUS.md  TEST_SUITES.md  WORK_STATE.md  analyze_fptovp  analyze_fptovp.c  c_const1_detailed_trace.txt  c_copy_detailed_trace.txt  c_dispatch_trace.txt  c_emulator_address_trace.txt  c_emulator_check_test.txt  c_emulator_count_test.txt  c_emulator_enhanced_trace.txt  c_emulator_execution_log.starter.txt  c_emulator_execution_log.txt  c_emulator_execution_log_1000.txt  c_emulator_execution_log_1000_new.txt  c_emulator_execution_log_2000_lines.txt  (+30 more)
.agent/: debugging.md  development.md  documentation.md  reference.md  testing.md
.ai_assistant_db/: CONTRIBUTING.md  CRITICAL_DEBUGGING_TECHNIQUE.md  CRITICAL_MEMORY.md  INDEX.md  README.md  architecture.md  build-system.md  glossary.md
.cursor/: worktrees.json
deprecated/: README.md
docs/: convert-maiko-submodule.md
documentation/: CONVERSION_STATUS.md  CRITICAL_DEBUGGING_TECHNIQUE.typ  DOCUMENTATION_IMPROVEMENT_PROPOSAL.typ  README.md  batch_update_typst.py  convert_md_to_typst.py  main.typ  move_to_deprecated.py  prelude.typ  update_typst_from_md.py
inc/: locfile.h
laiko/: PLAN.md  README.md  argtest.lisp  build.sh  laiko.asd  load-emulator.lisp  loader.lisp  loadups  maiko-lisp.asd  run.sh  verify-ifpage-accessors.lisp  verify-opcode-loading.lisp  verify-sysout-loading.lisp
maiko/: .gitignore  CMakeLists.txt  README.md
maiko/.cache/clangd/index/: address.h.A6CEE8AB0D1783D6.idx  adr68k.h.890C439876C2DC1F.idx  allocmds.c.44CCFFE56CB8243A.idx  allocmdsdefs.h.4F14C9FE713D064F.idx  arith.h.0BE349C375EBFC9F.idx  arithops.c.E30B24974157DF4B.idx  arithopsdefs.h.5B505AC4191E4CBD.idx  array.h.D09C7678F0C6D0BF.idx  arrayops.c.74EBFCE921524C4F.idx  arrayopsdefs.h.5AD9DE9452A98AC7.idx  asmbbt.c.CDB12827F4CE0941.idx  bb.h.FA2CEE1EAC362B2F.idx  bbtmacro.h.59D267F39AD5FA46.idx  bbtsub.c.818C882ACAC6C8E6.idx  bbtsubdefs.h.D01AD53F3146EEBF.idx  bin.c.F5C05D5F563AAB49.idx  bindefs.h.5704B2F2B5E9DD5E.idx  binds.c.5F3D7EEAC1E5049C.idx  bindsdefs.h.8B64545E10369B9A.idx  bitblt.c.6141819CE3DC12E8.idx  bitbltdefs.h.C74B1AA447A69773.idx  blt.c.C0836B32F351934B.idx  bltdefs.h.B84A533FDE4F498B.idx  byteswap.c.96CB18C6C0FFA552.idx  byteswapdefs.h.DC9240F644239B7E.idx  car-cdr.c.42080996D882D1D2.idx  car-cdrdefs.h.166539F83E7857DA.idx  cell.h.84C88F7C7DC139EA.idx  chardev.c.D1E8D027DEDD3301.idx  chardevdefs.h.35D1C6AF28A4614F.idx  common.c.88815D12EAF088F8.idx  commondefs.h.46245F342666E683.idx  conspage.c.61923E0D15777645.idx  conspagedefs.h.B515D5E96D3CD04C.idx  dbgtool.c.EFA5A9FA6BAF4B17.idx  dbgtooldefs.h.5B2A8278E7F35AB2.idx  dbprint.h.C1469EB5B0CF0DAE.idx  debug.h.0C884B43C4B2B7F9.idx  devconf.h.74C26D251854463D.idx  devif.h.4390D65913A2A491.idx  (+198 more)
maiko/build-cmake/: CMakeCache.txt  Makefile  cmake_install.cmake  compile_commands.json  lde  ldeether  ldesdl  mkvdate  setsout  tstsout  vdate.c
maiko/inc/: XKeymap.h  address.h  adr68k.h  allocmdsdefs.h  arith.h  arithopsdefs.h  array.h  arrayopsdefs.h  bb.h  bbtmacro.h  devif.h  dirdefs.h  display.h  dskdefs.h  execution_trace.h  gcdata.h  inlineC.h  kbdif.h  locfile.h  lpglob.h  lspglob.h  medleyfp.h  nfswatch.h  os.h  tosfns.h  ufsdefs.h  version.h
maiko/inc/maiko/: platform.h
maiko/include/: ansidecl.h  dld.h
maiko/scripts/: introspect-query
maiko/src/: allocmds.c  arithops.c  arrayops.c  asmbbt.c  atom.c  bbtsub.c  bin.c  binds.c  bitblt.c  blt.c  byteswap.c  car-cdr.c  chardev.c  chatter.c  codeconv.c  codetbl.c  common.c  conspage.c  dbgtool.c  dir.c  dlpi.c  doscomm.c  dosmouse.c  draw.c  dsk.c  dspif.c  dspsubrs.c  ejlisp.c  ether_common.c  ether_sunos.c  execution_trace.c  findkey.c  foreign.c  gc.c  gc2.c  gcarray.c  gccode.c  gcfinal.c  gchtfind.c  gcmain3.c  (+54 more)
maiko/src/introspect/: CMakeLists.txt  README.md  introspect.c  introspect.h  introspect_db.c  introspect_internal.h  introspect_trace.h  schema.sql
plans/: commenting-c-codebase-diagram.md  commenting-c-codebase-plan.md  floating-point-parity-implementation.md  introspection-module-next-steps.md  laiko-parity-improvement.md  laiko-parity-plan.md  laiko-parity.md
reports/: COMMIT_MESSAGE.md  IMPLEMENTATION_STATUS.md  MCP_IMPROVEMENT_NOTES.md  MULTI_IMPL_PARITY_SPEC.md  PARITY_TESTING_GUIDE.md  TASK_TRACKING.md  WORK_STATE.md  emulator_debug.log.review.md  introspection-status-2026-02-19.md  laiko-gvar-parity-analysis.md  laiko-opcode-audit-vs-maiko.md  laiko-parity-divergence-001.md  laiko_opcode_60_analysis.md  laiko_stack_divergence_2026-03-01.md  laiko_verification_2026-03-02.md  token-optimization-analysis.md  token-optimization-summary.md
scripts/: PARITY_WORKFLOW.md  README.md  analyze_execution_divergence.py  analyze_execution_window.py  analyze_memory.awk  analyze_memory_divergence.py  analyze_opcode_divergence.py  analyze_pc_divergence.py  analyze_registers.awk  analyze_stack_divergence.py  analyze_tos.awk  analyze_trace_divergence.awk  check_comment_headers.sh  check_parity.sh  check_parity_laiko.sh  compare_all_implementations.sh  compare_debug_logs.sh  compare_emulator_execution.sh  compare_execution_logs.sh  compare_fptovp_tables.py  compare_laiko_execution.sh  compare_multi_implementation.py  compare_state.py  compare_unified_traces.awk  compare_unified_traces.py  continuous_parity_check.sh  convert-maiko-submodule.sh  detect_regressions.py  enhanced_divergence_analysis.py  fix_divergence.sh  generate_debug_logs.sh  generate_parity_report.py  iterative_parity_workflow.py  parse_trace_fields.awk  run_parity_suite.sh  unified_test_harness.py  update_path_references.py  verify_endianness.sh  (+1 more)
(+1051 files in other folders)
